syntax = "proto3";

package teraterapb.v1;

option go_package = "github.com/minguu42/sandbox/teratera/gen/teraterapb/v1;teraterapb";

service TerateraService {
  rpc CheckHealth(CheckHealthRequest) returns (CheckHealthResponse);
}

message CheckHealthRequest {}

message CheckHealthResponse {
  string revision = 1;
}
